--- a/test/json/README
+++ b/test/json/README
@@ -3,5 +3,5 @@ In this directory contains commands to test JSON files
 Run to test result.json
 python ../../src/resultTest.py
 
-Run to test selectedResidues.json
-python ../../src/selectedResiduesTest.py
+Run to test selectedParametersResults.json
+python ../../src/selectedParametersResultsTest.py
